--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,15 @@
 repos:
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.2
+  - repo: local
     hooks:
-      - id: markdownlint
-        args: ["--fix"]
+      - id: format-check
+        name: format check
+        entry: ./script/pre-commit-format-check.sh
+        language: script
+        args: [client, servers/execution/runner]
+        stages: [pre-commit]
+
+  # - repo: https://github.com/igorshubovych/markdownlint-cli
+  #   rev: v0.32.2
+  #   hooks:
+  #     - id: markdownlint
+  #       args: ["--fix"]
