--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@into-cps-association/libms",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
@@ -16,12 +16,18 @@
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "node dist/src/main.js",
+    "start:pm2": "pm2 start pm2.config.js",
+    "stop:pm2": "pm2 delete libms",
     "syntax": "npx eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "posttest": "npx rimraf ../../files/user2/tools/README.md",
-    "test:all": "npx cross-env LOCAL_PATH=test/data jest --coverage",
+    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
     "test:e2e": "npx cross-env LOCAL_PATH=test/data jest --config ./test/jest-e2e.json --coverage",
+    "test:http": "yarn build && pm2 start -f --name libms-test dist/src/main.js -- -c .env -H ./config/http.json && jest test/cloudcmd --coverage --coverageThreshold=\"{}\" && pm2 delete libms-test",
+    "test:http-nocov": "yarn build && pm2 start -f --name libms-test dist/src/main.js -- -c .env -H ./config/http.json && jest test/cloudcmd  --coverage=false && pm2 delete libms-test",
+    "test:http-github": "yarn build && yarn start:pm2 && jest test/cloudcmd --coverage --coverageThreshold=\"{}\" && pm2 delete libms",
     "test:int": "npx cross-env LOCAL_PATH=test/data jest ../test/integration --coverage",
+    "test:nocov": "yarn test:http-nocov && npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage=false",
     "test:unit": "npx cross-env LOCAL_PATH=test/data jest ../test/unit --coverage"
   },
   "bin": "./dist/src/main.js",
@@ -34,12 +40,15 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.3.0",
+    "axios": "^1.5.1",
+    "cloudcmd": "^16.17.7",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
@@ -52,6 +61,7 @@
     "@types/supertest": "^2.0.13",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "cross-fetch": "^4.0.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
