--- a/docker/auth/compose-localhost.yml
+++ b/docker/auth/compose-localhost.yml
@@ -18,33 +18,31 @@ services:
     image: traefik/whoami
     labels:
       - "traefik.enable=true"
-      #Models a service that is open to all
       - "traefik.http.routers.all.entryPoints=web"
-      - "traefik.http.routers.all.rule=Host(`${SERVER_DNS}`)&&Path(`/whoami`)"
+      - "traefik.http.routers.all.rule=Path(`/whoami`)"
       - "traefik.http.routers.all.middlewares=traefik-forward-auth"
   libms:
     image: intocps/libms:latest
-    ports:
-      - "4001:4001"
     volumes:
       - ${DTAAS_DIR}/deploy/config/lib.docker:/dtaas/libms/.env
       - ${DTAAS_DIR}/files:/dtaas/libms/files
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.libms.entryPoints=web"
-      - "traefik.http.routers.libms.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/libms`)"
+      - "traefik.http.services.libms.loadbalancer.server.port=4001"
+      - "traefik.http.routers.libms.rule= PathPrefix(`/libms`)"
       - "traefik.http.routers.libms.middlewares=traefik-forward-auth"
   
   client:
-    image: intocps/dtaas-web:latest
-    ports:
-      - "4000:4000"
+    image: intocps/dtaas-web:0.3.2
     volumes:
-      - ${DTAAS_DIR}/deploy/config/client/env.trial.js:/dtaas/client/build/env.js
+      - ${DTAAS_DIR}/deploy/config/client/env.local.js:/dtaas/client/build/env.js
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.entryPoints=web"
-      - "traefik.http.routers.client.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/`)"
+      - "traefik.http.services.client.loadbalancer.server.port=4000"
+      - "traefik.http.routers.client.middlewares=traefik-forward-auth"
+      - "traefik.http.routers.client.rule=PathPrefix(`/`)"
 
   library:
     image: httpd:alpine3.19
@@ -53,24 +51,22 @@ services:
     labels:
     
       - "traefik.enable=true"
-      #Models a NoAuth needed service
       - "traefik.http.routers.noauth.entryPoints=web"
-      - "traefik.http.routers.noauth.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/lib`)"
+      - "traefik.http.routers.noauth.rule= PathPrefix(`/lib`) "
       - "traefik.http.routers.noauth.middlewares=traefik-forward-auth"
 
   user1:
     image: mltooling/ml-workspace-minimal:0.13.2
     volumes:
-      - ${DTAAS_DIR}/files/common:/workspace/common 
+      - ${DTAAS_DIR}/files/common:/workspace/common
       - ${DTAAS_DIR}/files/${username1}:/workspace
     environment:
       - AUTHENTICATE_VIA_JUPYTER=
       - WORKSPACE_BASE_URL=${username1}
     labels:
       - "traefik.enable=true"
-      #Models a service only visible to user1
       - "traefik.http.routers.u1.entryPoints=web"
-      - "traefik.http.routers.u1.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username1}`)"
+      - "traefik.http.routers.u1.rule=PathPrefix(`/${username1}`) "
       - "traefik.http.routers.u1.middlewares=traefik-forward-auth"
   
   user2:
@@ -83,16 +79,15 @@ services:
       - WORKSPACE_BASE_URL=${username2}
     labels:
       - "traefik.enable=true"
-      #Models a service only visible to user2
       - "traefik.http.routers.u2.entryPoints=web"
-      - "traefik.http.routers.u2.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username2}`)"
+      - "traefik.http.routers.u2.rule=PathPrefix(`/${username2}`) "
       - "traefik.http.routers.u2.middlewares=traefik-forward-auth"
   
   
   traefik-forward-auth:
     image: thomseddon/traefik-forward-auth:latest
     volumes:
-      - ${DTAAS_DIR}/servers/auth/conf:/conf
+      - ${DTAAS_DIR}/docker/auth/conf:/conf
     environment:
       - DEFAULT_PROVIDER=generic-oauth
       - PROVIDERS_GENERIC_OAUTH_AUTH_URL=${BASE_URL}/oauth/authorize
@@ -109,7 +104,7 @@ services:
       - "traefik.enable=true"
 
       - "traefik.http.routers.redirect.entryPoints=web"
-      - "traefik.http.routers.redirect.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/_oauth`)"
+      - "traefik.http.routers.redirect.rule=PathPrefix(`/_oauth`)"
       - "traefik.http.routers.redirect.middlewares=traefik-forward-auth"
 
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
