--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -27,9 +27,9 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
 
-      # - name: Install pm2
-      #   run: |
-      #     npm install -g pm2
+      - name: Install pm2
+        run: |
+          npm install -g pm2
 
       - name: Run the linting checks
         run: |
@@ -56,18 +56,18 @@ jobs:
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
 
-      # - name: Run http mode tests
-      #   run: |
-      #     cd servers/lib
-      #     yarn install
-      #     yarn build
-      #     yarn test:http-github
-      #   env:
-      #     PORT: 4002
-      #     LOCAL_PATH: ${{ github.workspace }}/files
-      #     MODE: local
-      #     LOG_LEVEL: debug
-      #     APOLLO_PATH: /lib
+      - name: Run http mode tests
+        run: |
+          cd servers/lib
+          yarn install
+          yarn build
+          yarn test:http-github
+        env:
+          PORT: 4002
+          LOCAL_PATH: ${{ github.workspace }}/files
+          MODE: local
+          LOG_LEVEL: debug
+          APOLLO_PATH: /lib
 
       - name: Upload test coverage to Codecov
         uses: codecov/codecov-action@v3
