--- a/client/package.json
+++ b/client/package.json
@@ -67,12 +67,14 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-is": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-oidc-context": "^2.2.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
+    "remark-gfm": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "strip-ansi": "^7.1.0",
