--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -50,7 +50,7 @@ jobs:
           yarn start -H ./config/http.json &
           sleep 5
           curl -f -LI http://localhost:4001/lib/files || echo "Failed to start the server"          
-          curl -f -LI http://127.0.0.1:4001/lib/files || echo "Failed to start the server"          
+          curl -f -LI http://localhost:4001 || echo "Should fail"          
 
       - name: Build the lib microservice
         run: |
