--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -38,7 +38,7 @@ jobs:
       # FOR TESTING
       - name: Build the lib microservice
         env:
-          PORT: 4001
+          PORT: 4002
           LOCAL_PATH: ${{ github.workspace }}/files
           MODE: local
           LOG_LEVEL: debug
@@ -49,8 +49,8 @@ jobs:
           yarn build
           yarn start -H ./config/http.json &
           sleep 5
-          curl -f -LI http://localhost:4001/lib/files || echo "Failed to start the server"          
-          curl -f -LI http://localhost:4001 || echo "Should fail"          
+          curl -f -LI http://localhost:4002/lib/files || echo "Failed to start the server"          
+          jest test/cloudcmd
 
       - name: Build the lib microservice
         run: |
