--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -50,7 +50,7 @@ jobs:
           yarn start -H ./config/http.json &
           sleep 5
           curl -f -LI http://localhost:4002/lib/files || echo "Failed to start the server"          
-          jest test/cloudcmd
+          yarn test:github
 
       - name: Build the lib microservice
         run: |
