--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,7 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/markdown-it": "^14.1.2",
+    "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
@@ -63,7 +63,6 @@
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
-    "markdown-it": "^14.1.0",
     "oidc-client-ts": "^2.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -78,6 +77,7 @@
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
     "remark-gfm": "^4.0.0",
+    "remarkable": "^2.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "strip-ansi": "^7.1.0",
