--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "@gitbeaker/rest": "^40.1.3",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/x-tree-view": "^7.17.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.32",
@@ -72,6 +73,7 @@
     "react-markdown": "^9.0.1",
     "react-oidc-context": "^2.2.2",
     "react-redux": "^8.1.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.2",
