--- a/.github/workflows/docker-dockerhub.yml
+++ b/.github/workflows/docker-dockerhub.yml
@@ -1,12 +1,13 @@
-name: Build and Push Docker Image
+# Reusable workflow for building and pushing a Docker Image to DockerHub.
+# 
+# Username is taken from the repository variable, "DOCKERHUB_USERNAME"
+# Password is taken from the repository secret, "DOCKERHUB_TOKEN"
+
+name: Build and Push Docker Image (DockerHub)
 
 on:
   workflow_call:
     inputs:
-      # registry:
-      #   required: false
-      #   type: string
-      #   default: "ghcr.io"
       image-name:
         required: true
         type: string
@@ -21,10 +22,13 @@ on:
         required: true
         type: string
     secrets:
-      DOCKERHUB_USERNAME:
-        required: true
       DOCKERHUB_TOKEN:
         required: true
+
+env:
+  registry: docker.io
+  username: ${{ vars.DOCKERHUB_USERNAME }}
+  password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
   build-and-push-image:
@@ -38,29 +42,23 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # - name: Log in to the Container registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ${{ inputs.registry }}
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.registry }}
+          username: ${{ env.username }}
+          password: ${{ env.password }}
 
       - name: Check if version exists
         id: check_version
         run: |
-          if docker manifest inspect ${{ inputs.image-name }}:${{ inputs.version }} > /dev/null 2>&1; then
+          if docker manifest inspect ${{ env.registry }}/${{ env.username }}/${{ inputs.image-name }}:${{ inputs.version }} > /dev/null 2>&1; then
             echo "Version ${{ inputs.version }} already exists."
             echo "exists=true" >> $GITHUB_ENV
           else
             echo "Version ${{ inputs.version }} does not exist."
             echo "exists=false" >> $GITHUB_ENV
           fi
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
         if: env.exists == 'false'
@@ -69,12 +67,12 @@ jobs:
           context: .
           file: ./docker/${{ inputs.dockerfile }}
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}:${{ inputs.version }}, ${{ vars.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}:latest
+          tags: ${{ env.registry }}/${{ env.username }}/${{ inputs.image-name }}:${{ inputs.version }}, ${{ env.registry }}/${{ env.username }}/${{ inputs.image-name }}:latest
 
       - name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v4
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ vars.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}
+          username: ${{ env.username }}
+          password: ${{ env.password }}
+          repository: ${{ env.username }}/${{ inputs.image-name }}
           readme-filepath: ${{ inputs.readme-file }}
