--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -131,7 +131,7 @@ jobs:
       github.event_name == 'push' &&
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
 
-    name: Publish to GitHub Packages
+    name: Publish NPM Package to GitHub Packages
     runs-on: ubuntu-latest
     needs: [get_version, test-lib-ms]
     permissions:
