--- a/client/package.json
+++ b/client/package.json
@@ -93,7 +93,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.25.7",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@babel/plugin-syntax-flow": "7.25.7",
     "@babel/plugin-transform-react-jsx": "7.25.7",
     "@eslint/eslintrc": "3.1.0",
@@ -107,6 +106,7 @@
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "globals": "15.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
