--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -189,4 +189,6 @@ jobs:
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: libms.dockerfile
       readme-file: servers/lib/DOCKER.md
-    secrets: inherit
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
