--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -5,3 +5,10 @@ MD013:
   tables: false
 MD046: 
   style: "fenced"
+overrides:
+  files:
+    - ".github/ISSUE_TEMPLATE/bug_report.md"
+    - ".github/ISSUE_TEMPLATE/feature_request.md"
+    - ".github/PULL_REQUEST_TEMPLATE/pull_request_template.md"
+  rules:
+    MD041: false
