--- a/.github/workflows/docker-ghcr.yml
+++ b/.github/workflows/docker-ghcr.yml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.registry }}
-          username: ${{ env.username }}
+          username: ${{ github.actor }}
           password: ${{ env.password }}
 
       - name: Check if version exists
