--- a/client/package.json
+++ b/client/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.25.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-flow": "7.25.7",
     "@babel/plugin-transform-react-jsx": "7.25.7",
     "@eslint/eslintrc": "3.1.0",
