--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -13,7 +13,7 @@
     "clean": "npx rimraf build node_modules coverage dist src.svg test.svg",
     "check:final": "concurrently -s all -g -n syntax,format,graph,build,test \"yarn syntax\" \"yarn format\" \"yarn graph\" \"yarn build\" \"yarn test\"",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
-    "start": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/main.js",
+    "start": "npx cross-env NODE_OPTIONS=--es-module-specifier-resolution=node --experimental-specifier-resolution=node NODE_NO_WARNINGS=1 node dist/src/main.js",
     "syntax": "npx eslint . --fix",
     "pretest": "npx rimraf runner.test.yaml script && npx shx cp test/config/runner.test.yaml runner.test.yaml && npx shx mkdir script && npx shx cp test/data/script/* script/.",
     "posttest": "npx rimraf runner.test.yaml script",
@@ -35,30 +35,33 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.1",
+    "@eslint/eslintrc": "^3.0.2",
     "@jest/globals": "^29.7.0",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.7",
+    "@nestjs/testing": "^10.3.8",
     "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.4.14",
+    "@swc/core": "^1.5.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "concurrently": "^8.2.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.2.0",
+    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.2.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.4",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "tsconfig-paths": "^4.2.0",
@@ -66,20 +69,20 @@
     "webpack": "^5.91.0"
   },
   "dependencies": {
-    "@nestjs/common": "^10.3.7",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.7",
-    "@nestjs/platform-express": "^10.3.7",
+    "@nestjs/core": "^10.3.8",
+    "@nestjs/platform-express": "^10.3.8",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cross-env": "^7.0.3",
-    "execa": "^8.0.1",
+    "execa": "^9.1.0",
     "express": "^4.19.2",
     "js-yaml": "^4.1.0",
     "keyv": "^4.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
