--- a/servers/execution/runner/runner.yaml.sample
+++ b/servers/execution/runner/runner.yaml.sample
@@ -1,6 +1,6 @@
 port: 5000
 location: 'script' #directory location of scripts
-commands:
+commands: #list of permitted scripts
   - create
   - execute
   - terminate
